--- a/options.html
+++ b/options.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>newtab options</title>
+        <title>New Tab Options</title>
     </head>
-    
-    <body>
-        <h1>customise new tab</h1>
 
-        <form id="optionsform">
-            <label for="bgImageFile">upload bg image:</label>
+    <body>
+        <h1>Customize New Tab</h1>
+        <form id="optionsForm">
+            <label for="bgImageFile">Upload Background Image:</label>
             <input type="file" id="bgImageFile" name="bgImageFile" accept="image/*"><br><br>
 
-            <label for="fontColor">font color:</label>
+            <label for="fontColor">Font Color:</label>
             <input type="color" id="fontColor" name="fontColor"><br><br>
 
-            <label for="borderColor">border color:</label>
+            <label for="borderColor">Border Color:</label>
             <input type="color" id="borderColor" name="borderColor"><br><br>
 
             <input type="submit" value="Save">        
