--- a/newtab.html
+++ b/newtab.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="newtab.css">
-        <title>New Tab</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="newtab.css">
+    <title>New Tab</title>
+</head>
 
-    <body>
-        <div id="container">
-            <span>
-                <div id="clock"></div>
-                <div id="date"></div>
-            </span>
-        </div>
-        
-        <script src="newtab.js"></script>
-    </body>
+<body>
+    <div id="container">
+        <span>
+            <div id="clock"></div>
+            <div id="date"></div>
+            <div id="weather"></div>
+        </span>
+    </div>
+
+    <script src="newtab.js"></script>
+</body>
 
 </html>
